// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`User Profile route allows to patch user profile 1`] = `
Object {
  "data": Object {
    "city": "",
    "dateOfBirth": "",
    "emails": Array [],
    "employmentHistory": "",
    "firstName": "Foo",
    "firstNameNative": "",
    "gender": "",
    "githubId": "",
    "lastName": "Bar",
    "lastNameNative": "",
    "notes": "",
    "phone": "",
    "subscribe": true,
    "tShirtSize": "",
  },
}
`;

exports[`User Profile route returns data 1`] = `
Object {
  "data": Object {
    "city": "",
    "contacts": Object {
      "emails": "",
      "other": "",
      "skype": "",
      "telegram": "",
    },
    "dateOfBirth": "",
    "emails": Array [],
    "employmentHistory": "",
    "epamDetails": Object {
      "isEPAMEmployee": "false",
    },
    "experience": Object {},
    "firstName": "first name",
    "firstNameNative": "",
    "gender": "",
    "githubId": "",
    "lastName": "",
    "lastNameNative": "",
    "mentoring": Object {},
    "notes": "",
    "phone": "",
    "primaryEducation": Object {
      "faculty": "",
      "graduationYear": "",
      "university": "",
    },
    "subscribe": true,
    "tShirtSize": "",
  },
}
`;
